--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
 <head>
   <meta charset="UTF-8">
   <link rel="icon" href="/favicon.ico">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vite App</title>
 
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background-color: white;
+    }
+  </style>
 
 </head>
 
