--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     body {
       margin: 0;
       padding: 0;
-      background-color: white;
     }
   </style>
 
@@ -26,5 +25,7 @@
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
 </body>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </html>
