--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     body {
       margin: 0;
       padding: 0;
-      background-color: #fcfafa;
+      background-color: #ffffff;
       width: 100vw;
     }
   </style>
